# BookScraper-and-TTS

./: .gitignore  README.md  main.py  pyproject.toml  url.env
.github/: copilot-instructions.md
api/: main.py  test.py  test_conversational_memory.ipynb
chatbot/: chatbot.py
data/: books.csv
data/adventure-horror/: adventure.csv  detective.csv  fiction.csv  horror.csv  time_travel.csv
data/children-comics/: children.csv  comics.csv  education.csv  poetry.csv
data/comedy-romance/: comedy.csv  medicine.csv  novels.csv  philosophy.csv  romance.csv
data/economics-finance/: economic-finance.csv  feng_shui.csv  life_skills.csv  management.csv  psychology.csv
data/history-geography/: culture_society.csv  geography.csv  history.csv  memoirs.csv
data/personal_costume-xianxia/: 18+.csv  short_stories.csv  wuxia.csv  xianxia.csv
scrape/: book_csv.py  books.py  scrape_web.py  setup_driver.py
scraper/: close_popups_and_ads.py  safe_click.py  scraped_web.py  scrapped_web.py  setup_driver.py  update_csv.py
scraper/get_page_data/: get_ebook_coming_soon_data.py  get_ebook_hot_data.py  get_ebook_new_data.py  get_pagination_info.py
