[project]
name = "BookScraper-and-TTS"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.0",
    "fastapi[standard]>=0.116.2",
    "gpt4all>=2.8.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.0",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.1",
]
